# inkwell

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  EXPERT_RECOMMENDATIONS.md  FEATURES_STATUS.md  FEATURE_BACKLOG.md  FOCUS_MODE_PROPOSAL.md  HOMEBREW_SUBMISSION.md  Inkwell-0.2.0.dmg  PROJECT_STRUCTURE.md  README.md  RECOVERY_PLAN_ARCHIVE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  TAP_UPDATE_INSTRUCTIONS.md  UNFUCK_STATUS.md  build.sh  build_release.sh  create_icon.py  create_simple_icon.sh  design-principles-analysis.md  design_showcase.md  launch.sh  launch_showcase.sh  simple_code.md  test_app.sh  test_basic_drag.sh  test_codeblock.md  test_command_palette.sh  test_dimming.sh  test_document.md  test_drag_crash.sh  test_drag_drop.md  test_drag_drop.sh  test_drag_drop_complete.sh  test_drag_effects.sh  test_drag_final.sh  test_enhanced_effects.sh  (+20 more)
.github/workflows/: release.yml
docs/: CHANGELOG.md  FEATURES_STATUS.md  HOMEBREW_DISTRIBUTION.md  PROJECT_STATUS.md  README_ORIGINAL_FANTASY.md  RECOVERY_PLAN.md  RELEASE_CHECKLIST.md  ROADMAP.md  TEST_RESULTS.md  drag_drop_test.md
homebrew/: inkwell.rb
include/: version.h
include/core/: document.h  markdown_parser.h  toc_generator.h  virtual_dom.h
include/effects/: animation_orchestrator.h  drag_effect_protocol.h  effect_manager.h  noise_generator.h  pass_through_view.h  physics_world.h
include/platform/: file_watcher.h
include/rendering/: glyph_atlas.h  markdown_renderer.h  render_engine.h  text_layout.h
include/ui/: command_palette.h  design_system.h  enhanced_window.h  settings_manager.h  smooth_scroll.h
include/utils/: file_utils.h  memory_pool.h  string_utils.h
resources/: Info.plist  Inkwell.icns  welcome.md
scripts/: build_release.sh  build_simple.sh  install_cli.sh  launch.sh  release.sh  setup_homebrew_tap.sh  update_build.sh  update_cask.sh
shaders/: enhanced_render.metal  text_render.metal
src/: main.mm
src/core/: document.cpp  markdown_parser.cpp  toc_generator.cpp  virtual_dom.cpp
src/effects/: animation_orchestrator.mm  base_drag_effect.mm  drag_integration_helper.h  effect_debug_overlay.mm  effect_manager.mm  effects_registry.mm  gravitational_wake_effect.mm  liquid_glass_effect.mm  no_effect.mm  noise_generator.mm  particle_effect.mm  pass_through_view.mm  physics_world.mm  ripple_effect.mm
src/platform/macos/: app_delegate.mm  cocoa_bridge.mm  file_watcher.mm  main_window.mm  quick_look_plugin.mm  settings_window.mm
src/rendering/: glyph_atlas.mm  markdown_renderer.mm  mermaid_renderer.h  mermaid_renderer.mm  metal_renderer.mm  render_engine.mm  text_layout.cpp
src/ui/: command_palette.mm  design_system.cpp  enhanced_window.mm  focus_mode.mm  platform_effects.mm  settings_manager.mm  simple_command_palette.mm  smooth_scroll.mm
src/utils/: file_utils.cpp  memory_pool.cpp  string_utils.cpp
tests/: bench_parser.cpp  bench_rendering.cpp  test_memory_pool.cpp  test_parser.cpp  test_toc_generator.cpp  test_virtual_dom.cpp
